Fix post image stretching

--- a/app/styles/post.less
+++ b/app/styles/post.less
@@ -133,7 +133,6 @@
       display: block;
       width: 100%;
       height: auto;
-      min-height: 400px;
       background: #f0f0f0;
       opacity: 0;
       position: relative;
